package federation

import (
	"context"
	"fmt"
	"log"
)

// TrustAttestationLedger is the Go interface to the Python ledger
type TrustAttestationLedger struct {
	// In production, this would use gRPC to call Python service
	// For now, placeholder
}

// NewTrustAttestationLedger creates a new ledger client
func NewTrustAttestationLedger() *TrustAttestationLedger {
	return &TrustAttestationLedger{}
}

// VerifyAttestation verifies attestation hashes
func (tal *TrustAttestationLedger) VerifyAttestation(ctx context.Context, localHash, remoteHash, agentID string) (*TrustAttestation, error) {
	// In production, this would call Python service via gRPC
	// For now, return mock attestation

	log.Printf("üîç Verifying attestation: agent=%s, local_hash=%s, remote_hash=%s",
		agentID, localHash[:8], remoteHash[:8])

	return &TrustAttestation{
		AttestationID: "mock-attestation-id",
		LocalOCX:      "ocx-local",
		RemoteOCX:     "ocx-remote",
		AgentID:       agentID,
		AuditHash:     localHash,
		TrustLevel:    0.85,
		Signature:     "mock-signature",
	}, nil
}

// Example: Complete Inter-OCX handshake flow
func ExampleHandshakeFlow() {
	// 1. Initialize components
	ledger := NewTrustAttestationLedger()
	registry := NewFederationRegistry()

	// 2. Create local and remote OCX instances
	localOCX := &OCXInstance{
		InstanceID:   "ocx-us-west1-001",
		TrustDomain:  "ocx.example.com",
		Region:       "us-west1",
		Organization: "Example Corp",
	}

	remoteOCX := &OCXInstance{
		InstanceID:   "ocx-eu-west1-002",
		TrustDomain:  "ocx.partner.com",
		Region:       "eu-west1",
		Organization: "Partner Corp",
	}

	// 3. Register instances
	registry.Register(localOCX)
	registry.Register(remoteOCX)

	// 4. Perform handshake
	handshake := NewInterOCXHandshake(localOCX, remoteOCX, ledger)

	ctx := context.Background()
	attestation, err := handshake.Negotiate(ctx, "AGENT_001")
	if err != nil {
		log.Fatalf("Handshake failed: %v", err)
	}

	fmt.Printf("‚úÖ Handshake successful!\n")
	fmt.Printf("   Trust Level: %.2f\n", attestation.TrustLevel)
	fmt.Printf("   Attestation ID: %s\n", attestation.AttestationID)

	// 5. Charge trust tax (would integrate with Python service)
	fee := 0.01 * (1.0 / attestation.TrustLevel)
	fmt.Printf("üí∞ Trust tax: $%.4f\n", fee)
}
